kylin-printer (1.0.6) v101; urgency=medium

  * 修复bug#35968：手动安装界面关闭“打印机名称不可为空”的提示后，手动安装界面退出
  * 修复bug#33650：手动安装界面拖拽deb包始终显示加载中
  * 修复bug#36306：测试机接入奔图P2505，系统桌面右上角提示打印机信息发生截断
  * 修复bug#36072：手动安装打印机驱动界面相关网址显示错误
  * 修复bug#35976：添加本地驱动或拖拽deb包到手动安装驱动界面，界面一直在转圈，无法跳转授权界面
  * 修复bug#35968：手动安装界面关闭“打印机名称不可为空”的提示后，手动安装界面退出
  * 修复bug#35964：夜间模式下，麒麟打印服务界面部分未反白，无法看清
  * 修复bug#35870：接入usb打印机，桌面右上角弹框中部分信息显示不全
  * 修复bug#34013：麒麟打印程序启动时对打印机做以判断
  * 修复bug#33650：手动安装界面拖拽deb包始终显示加载中
  * 修复bug#33389：已安装过的打印机拔插之后仍继续安装
  * 增加libqapt3-runtime依赖

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 26 Jan 2021 14:30:00 +0800

kylin-printer (1.0.5) v101; urgency=medium

  * 修复bug#33931：打印完成之后仍然显示打印机正在启动
  * 修复bug#33733：手动安装驱动界面官网希望可以点击
  * 修复bug#33699：深色模式下所有界面弹窗UI异常
  * 修复bug#33672：手动安装界面任何区域都可响应所拖拽的文件
  * 修复bug#33468：所有窗口、界面、气泡边界处没有阴影效果
  * 修复bug#33458：关闭按钮尺寸不对
  * 修复bug#33413：手动安装界面点击“添加”后，手动安装界面应该消失
  * 修复bug#33333：气泡显示打印机名称时显示异常

 -- baijincheng <baijincheng@kylinos.cn>  Fri, 22 Jan 2021 17:30:00 +0800

kylin-printer (1.0.4) v101; urgency=medium

  * 修改流程，未安装的厂商类的打印机，找generic类的驱动
  * 去掉冗余的打印信息

 -- hanzehui <hanzehui@kylinos.cn>  Wed, 21 Jan 2021 16:31:00 +0800

kylin-printer (1.0.3) v101; urgency=medium

  * 打印机名称带"+"解决无法打印的问题

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 20 Jan 2021 12:59:00 +0800

kylin-printer (1.0.2) v101; urgency=medium

  * 修改下拉列表处获取ppd文件数最多为3个
  * getDeviceTypeFromPath内部if结构中加continue

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 13 Jan 2021 10:31:00 +0800

kylin-printer (1.0.1) v101; urgency=medium

  * V1.0上线.

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 12 Jan 2021 17:26:38 +0800

kylin-printer (1.0.1kord) v101; urgency=medium

  * Initial release.

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Tue, 12 Jan 2021 16:12:38 +0800